--- a/data/templates/default/strings.tmpl
+++ b/data/templates/default/strings.tmpl
@@ -1,28 +1,43 @@
+[%- # These strings are used on the API page -%]
+[%- str_inherited_modules   = 'Inherited Modules' -%]
+[%- str_package             = 'Package' -%]
+[%- str_other_package       = 'Other Package'-%]
+[%- str_version             = 'Version' -%]
+[%- str_file                = 'File' -%]
+[%- str_contains_pod        = 'Contains POD' -%]
+[%- str_modules             = 'Modules' -%]
+[%- str_class_methods       = 'Class Methods' -%]
+[%- str_object_methods      = 'Object Methods' -%]
+[%- str_general_subroutines = 'General Subroutines' -%]
+[%- str_package_variables   = 'Package Variables' -%]
+[%- str_api_note            = 'This API is just a guess on the meaning of the subroutines in the file.' -%]
+[%- str_class_methods_note  = 'Class Methods' -%]
+[%- str_api_notes_final     = 'are assumed be in one of the following forms:' -%]
 
-[% # These strings are used on the API page %]
-[% str_inherited_modules   = 'Inherited Modules' %]
-[% str_package             = 'Package' %]
-[% str_other_package       = 'Other Package'%]
-[% str_version             = 'Version' %]
-[% str_file                = 'File' %]
-[% str_contains_pod        = 'Contains POD' %]
-[% str_modules             = 'Modules' %]
-[% str_class_methods       = 'Class Methods' %]
-[% str_object_methods      = 'Object Methods' %]
-[% str_general_subroutines = 'General Subroutines' %]
-[% str_package_variables   = 'Package Variables' %]
-[% str_api_note            = 'This API is just a guess on the meaning of the subroutines in the file.' %]
-[% str_class_methods_note  = 'Class Methods' %]
-[% str_api_notes_final     = 'are assumed be in one of the following forms:' %]
+[%- # These strings are used by the headder of every page -%]
+[%- str_head_pod            = 'POD' -%]
+[%- str_head_text           = 'Text' -%]
+[%- str_head_api            = 'API' -%]
+[%- str_head_code           = 'CODE' -%]
 
-[% # These strings are used by the headder of every page %]
-[% str_head_pod            = 'POD' %]
-[% str_head_text           = 'Text' %]
-[% str_head_api            = 'API' %]
-[% str_head_code           = 'CODE' %]
+[%- # Main framims page strings -%]
+[%- str_frame_title_short    = 'DocPerl' -%]
+[%- str_frame_title_long     = 'Perl Documentation' -%]
 
-[% # Javascript strings %]
-[% str_list_show           = 'Show' %]
-[% str_list_hide           = 'Hide' %]
-[% str_section_show        = 'Show' %]
-[% str_section_hide        = 'Hide' %]
+[%- # Javascript strings -%]
+[%- str_list_show           = 'Show' -%]
+[%- str_list_hide           = 'Hide' -%]
+[%- str_section_show        = 'Show' -%]
+[%- str_section_hide        = 'Hide' -%]
+
+[%- # Strings used by the list.html page -%]
+[% str_adv_open_title       = 'Open Advanced Search Options' %]
+[% str_adv_close_title      = 'Close Advanced Search Options' %]
+[% str_search_input_title   = 'Find modules by name' %]
+
+
+
+
+
+
+
