Bug 1698914: Names renamed to Modules
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@223 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/list.html.tmpl
+++ b/data/templates/default/list.html.tmpl
@@ -295,7 +295,7 @@
 		<div id="names_doc" style="display:none">
 			<h2 id="names_head">
 			<a id="plus__names" href="javascript: section_toggle('names');" class="mod_expand" title="[% str_section_hide %]">-</a>
-			Search - Names (<span id="names_count">0</span>)</h2>
+			Search - Modules (<span id="names_count">0</span>)</h2>
 			<div id="names">
 			</div>
 		</div>
