--- a/data/templates/default/strings.tmpl
+++ b/data/templates/default/strings.tmpl
@@ -34,10 +34,23 @@
 [% str_adv_open_title       = 'Open Advanced Search Options' %]
 [% str_adv_close_title      = 'Close Advanced Search Options' %]
 [% str_search_input_title   = 'Find modules by name' %]
-
-
-
-
-
-
+[% str_search_check_module  = 'Module' %]
+[% str_search_check_pod     = 'POD' %]
+[% str_search_check_func    = 'Function' %]
+[% str_search_check_cpan    = 'CPAN' %]
+[% str_search_cpan_all      = 'All' %]
+[% str_search_cpan_module   = 'Modules' %]
+[% str_search_cpan_dist     = 'Distributions' %]
+[% str_search_cpan_author   = 'Authors' %]
+[% str_list_search_func     = 'Search - Functions' %]
+[% str_list_search_pod      = 'Search - POD' %]
+[% str_list_search_module   = 'Search - Modules' %]
+[% str_list_recent          = 'Recent Modules' %]
+[% str_list_perl            = 'Perl' %]
+[% str_list_local           = 'Local Programs' %]
+[% str_list_inc             = 'Installed Modules' %]
+[% str_link_docperl_home    = 'DocPerl Home Page' %]
+[% str_link_clear_cache     = 'Clear Cache' %]
+[% str_link_firefox         = 'Bookmark for Firefox sidebar' %]
+[% str_link_bookmark        = 'Bookmark the page' %]
 
