Bug 1698934: Fixed recent modules behaving badly
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@225 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/module_head.html.tmpl
+++ b/data/templates/default/module_head.html.tmpl
@@ -46,7 +46,7 @@
 				next.style.display    = 'block';
 				current_file = select.options[index].value;
 			}
-			window.parent.menu.click_module('[% module.substr(0,1) %]__[% location %]__[% module.replace(':','_') %]');
+			window.parent.menu.click_module('[% location %]__[% module.substr(0,1) %]__[% module.replace(':','_') %]');
 		//-->
 		</script>
 	</head>
