Changed getting of the substring to perl code to stop the relience of too new a version of Template Toolkit
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@239 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/module_head.html.tmpl
+++ b/data/templates/default/module_head.html.tmpl
@@ -46,7 +46,10 @@
 				next.style.display    = 'block';
 				current_file = select.options[index].value;
 			}
-			window.parent.menu.click_module('[% location %]__[% module.substr(0,1) %]__[% module.replace(':','_') %]');
+			if (window.parent.menu.click_module)
+				window.parent.menu.click_module('[% location %]__[% module.substr(0,1) %]__[% module.replace(':','_') %]');
+			else
+				setTimeout("window.parent.menu.click_module('[% location %]__[% module_1st %]__[% module.replace(':','_') %]')", 3000);
 		//-->
 		</script>
 	</head>
