--- a/data/templates/default/module_head.html.tmpl
+++ b/data/templates/default/module_head.html.tmpl
@@ -47,7 +47,7 @@
 				current_file = select.options[index].value;
 			}
 			if (window.parent.menu.click_module)
-				window.parent.menu.click_module('[% location %]__[% module.substr(0,1) %]__[% module.replace(':','_') %]');
+				window.parent.menu.click_module('[% location %]__[% module_1st %]__[% module.replace(':','_') %]');
 			else
 				setTimeout("window.parent.menu.click_module('[% location %]__[% module_1st %]__[% module.replace(':','_') %]')", 3000);
 		//-->
