Tweeked the display of the code links and top of document links
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@253 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/cpan.css.tmpl
+++ b/data/templates/default/cpan.css.tmpl
@@ -36,6 +36,7 @@ h1 div.up {
 	width:              16px;
 	display:            inline;
 	font-size:          smaller;
+	padding:            0px 4px 0px 4px;
 }
 h1 a.code,
 h2 a.code,
@@ -45,6 +46,9 @@ h4 a.code {
 	height:             16px;
 	width:              16px;
 	font-size:          smaller;
+	text-align:         center;
+	vertical-align:     middle;
+	padding:            0px 4px 0px 4px;
 }
 h2 {
 	font-size:          medium;
