--- a/data/templates/default/css.css.tmpl
+++ b/data/templates/default/css.css.tmpl
@@ -86,3 +86,111 @@ li.level4 {
 	padding-left:       9em;
 	font-size:          0.8em;
 }
+
+body#list_page {
+	font-size:          8pt;
+	padding:            0px;
+	margin:             0px;
+}
+#list_page h1, #list_page h2, #list_page h3 {
+	margin-top:         0px;
+	padding:            5px 2px 4px 2px;
+	font-family:        sans-serif;
+}
+#list_page h1 {
+	font-size:          1.4em;
+	text-align:         center;
+	-moz-border-radius: 0px;
+}
+#list_page h2 {
+	font-size:          1.2em;
+	-moz-border-radius: 0px;
+}
+#list_page table {
+	font-size:          0.9em;
+}
+#list_page ul {
+	font-size:          1em;
+	list-style-type:    none;
+	padding-left:       0px;
+	margin-left:        0px;
+}
+#list_page li {
+	clear:              left;
+}
+#list_page ul li {
+	padding-left:       0.3em;
+}
+#list_page ul ul {
+	padding-left:       0.3em;
+	margin-left:        0.3em;
+}
+#list_page li > ul {
+	display:            none;
+}
+#list_page .plus {
+	padding-left:       2px;
+	padding-right:      2px;
+	border-style:       solid;
+	border-width:       1px;
+}
+#list_page .mod_expand {
+	width:              1em;
+	margin-right:       0.8em;
+	text-align:         center;
+	vertical-align:     middle;
+	display:            block;
+	float:              left;
+	border-style:       solid;
+	border-width:       1px;
+	clear:              left;
+	-moz-border-radius: 4px;
+	border-radius:      4px;
+	text-decoration:    none;
+}
+#list_page .mod_expand {
+	-moz-border-radius: 3px;
+	border-radius:      3px;
+}
+#list_page .info {
+	width:              10px;
+	-moz-border-radius: 10px;
+	border-width:       1px;
+	border-color:       red;
+	border-style:       solid;
+	float:              right;
+	text-align:         center;
+}
+#list_page .info span {
+	display:            none;
+	float:              right;
+	border:             1px solid black;
+	background-color:   white;
+	padding:            3px;
+	position:           relative;
+	left:               1px;
+	top:                1px;
+}
+#list_page .info:hover span {
+	display:            block;
+}
+#list_page #adv_open,
+#list_page #adv_close {
+	border:             solid black 1px;
+	padding:            2px;
+	font-weight:        bold;
+	font-size:          1.4em;
+	cursor:             pointer;
+}
+#list_page #adv_open {
+}
+#list_page #adv_close {
+	display:           none;
+}
+#list_page #advanced {
+	display:           none;
+}
+#list_page #advanced label,
+#list_page #advanced select {
+	font-size:         1.2em;
+}
