--- a/data/templates/default/list.html.tmpl
+++ b/data/templates/default/list.html.tmpl
@@ -17,113 +17,6 @@
 		<style type="text/css">
 		<!--/* <![CDATA[ */
 			@import url("?page=css.css");
-			body {
-				font-size:          8pt;
-				padding:            0px;
-				margin:             0px;
-			}
-			h1, h2, h3 {
-				margin-top:         0px;
-				padding:            5px 2px 4px 2px;
-				font-family:        sans-serif;
-			}
-			h1 {
-				font-size:          1.4em;
-				text-align:         center;
-				-moz-border-radius: 0px;
-			}
-			h2 {
-				font-size:          1.2em;
-				-moz-border-radius: 0px;
-			}
-			table {
-				font-size:          0.9em;
-			}
-			ul {
-				font-size:          1em;
-				list-style-type:    none;
-				padding-left:       0px;
-				margin-left:        0px;
-			}
-			li {
-				clear:              left;
-			}
-			ul li {
-				padding-left:       0.3em;
-			}
-			ul ul {
-				padding-left:       0.3em;
-				margin-left:        0.3em;
-			}
-			li > ul {
-				display:            none;
-			}
-			.plus {
-				padding-left:       2px;
-				padding-right:      2px;
-				border-style:       solid;
-				border-width:       1px;
-			}
-			.mod_expand {
-				width:              1em;
-				margin-right:       0.8em;
-				text-align:         center;
-				vertical-align:     middle;
-				display:            block;
-				float:              left;
-				border-style:       solid;
-				border-width:       1px;
-				clear:              left;
-				-moz-border-radius: 4px;
-				border-radius:      4px;
-				text-decoration:    none;
-			}
-			.mod_expand {
-				-moz-border-radius: 3px;
-				border-radius:      3px;
-			}
-			.info {
-				width:              10px;
-				-moz-border-radius: 10px;
-				border-width:       1px;
-				border-color:       red;
-				border-style:       solid;
-				float:              right;
-				text-align:         center;
-			}
-			.info span {
-				display:            none;
-				float:              right;
-				border:             1px solid black;
-				background-color:   white;
-				padding:            3px;
-				position:           relative;
-				left:               1px;
-				top:                1px;
-			}
-			.info:hover span {
-				display:            block;
-			}
-			#adv_open,
-			#adv_close {
-				border:             solid black 1px;
-				padding:            2px;
-				font-weight:        bold;
-				font-size:          1.4em;
-				cursor:             pointer;
-			}
-			#adv_open {
-			}
-			#adv_close {
-				display:           none;
-			}
-			#advanced {
-				display:           none;
-			}
-			#advanced label,
-			#advanced select {
-				font-size:         1.2em;
-			}
 		/* ]]> */-->
 		</style>
 		<script type="text/javascript" src="?page=list.js&amp;sidebar=[% IF sidebar %]1[% ELSE %]0[% END %]"></script>
@@ -143,7 +36,7 @@
 		/* ]]> */-->
 		</script>
 	</head>
-	<body onload="setup_modules();">
+	<body id="list_page" onload="setup_modules();">
 		<h1 id="headding" style="overflow: hidden">Perl&nbsp;Documentation</h1>
 		<!--h2>Search</h2-->
 		<center style="padding-bottom: 1em">
