Fixed more css for IE
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@262 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/module_head.html.tmpl
+++ b/data/templates/default/module_head.html.tmpl
@@ -14,8 +14,8 @@
 		<meta name="keywords"	 content="" />
 		<style type="text/css">
 		<!--/* <![CDATA[ */
-			@import url("?page=common.css");
-			@import url("?page=[% StyleSheet || 'cpan' %].css");
+			@import url("[% ENV.SCRIPT_NAME %]?page=common.css");
+			@import url("[% ENV.SCRIPT_NAME %]?page=[% StyleSheet || 'cpan' %].css");
 	[%- current_file = 0 -%]
 	[%- IF sources.size > 1 -%]
 		[%- file_count = 0 -%]
