--- a/data/templates/default/common.css.tmpl
+++ b/data/templates/default/common.css.tmpl
@@ -10,6 +10,7 @@ body {
 #headding {
 	position:           fixed;
 	background-color:   white;
+	width:              100%;
 }
 #headding h1 {
 	float:              left;
