Added image for info instead of text in a box
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@265 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/list.html.tmpl
+++ b/data/templates/default/list.html.tmpl
@@ -95,7 +95,7 @@
 		</div>
 		[% UNLESS LocalOnly %]
 		<div id="perl_doc">
-			<h2 id="perl_head"><span class="info">i<span>[% perl_path %]</span></span>
+			<h2 id="perl_head"><span class="info"><img src="info.png" alt="info" border="0"/><span>[% perl_path %]</span></span>
 			<a id="plus__perl" href="javascript: section_toggle('perl');" class="mod_expand" title="[% str_section_hide %]">-</a>
 			[% PerlLabel || str_list_perl %] (<span id="perl_count">0</span>)</h2>
 			<div id="perl">
@@ -103,7 +103,7 @@
 		</div>
 		[%- END %]
 		<div id="local_doc">
-			<h2 id="local_head"><span class="info">i<span>[% local_path %]</span></span>
+			<h2 id="local_head"><span class="info"><img src="info.png" alt="info" border="0"/><span>[% local_path %]</span></span>
 			<a id="plus__local" href="javascript: section_toggle('local');" class="mod_expand" title="[% str_section_hide %]">-</a>
 			[% LocalLabel || str_list_local %] (<span id="local_count">0</span>)</h2>
 			<div id="local">
@@ -111,7 +111,7 @@
 		</div>
 		[% UNLESS LocalOnly %]
 		<div id="inc_doc">
-			<h2 id="inc_head"><span class="info">i<span>[% inc_path %]</span></span>
+			<h2 id="inc_head"><span class="info"><img src="info.png" alt="info" border="0"/><span>[% inc_path %]</span></span>
 			<a id="plus__inc" href="javascript: section_toggle('inc');" class="mod_expand" title="[% str_section_hide %]">-</a>
 			[% IncLabel || str_list_inc %] (<span id="inc_count">0</span>)</h2>
 			<div id="inc">
