--- a/data/templates/default/css.css.tmpl
+++ b/data/templates/default/css.css.tmpl
@@ -155,21 +155,21 @@ body#list_page {
 #list_page .info {
 	width:              10px;
 	-moz-border-radius: 10px;
-	border-width:       1px;
-	border-color:       red;
-	border-style:       solid;
+	border-width:       0px;
 	float:              right;
 	text-align:         center;
+	margin-right:       4px;
+	margin-top:         -3px;
 }
 #list_page .info span {
 	display:            none;
 	float:              right;
 	border:             1px solid black;
 	background-color:   white;
-	padding:            3px;
 	position:           relative;
 	left:               1px;
 	top:                1px;
+	margin-right:       -4px;
 }
 #list_page .info:hover span {
 	display:            block;
